# Gestaopc

./: .gitignore  Claude.md  README.md  Relatorio_Projetos.md  Relatório.txt  gestaopc.spec  pyproject.toml  requirements.txt  run_gui.py  take_screenshot.ps1
.agent/memory/: .gitkeep
.agent/skills/: .gitkeep
.github/workflows/: ci.yml
LICENSES/: THIRD_PARTY_NOTICES.md
docs/: AUDITORIA_EFICIENCIA_SEGURANCA.md  COVERAGE_BASELINE.md  PACKAGING.md  RECON_REPORT.md  TESTES_PRATICOS.md
packaging/: README_DISTRIBUICAO.md
scripts/: build_release.py  capture_gui.py  mcp_server.py  test_media_detect.py
skills/: 01_limpeza_midia.md  02_limpeza_downloads.md  03_otimizacao_ssd.md  04_duplicatas.md
specs/: .gitkeep  01-storage-manager.md  02-ai-toolbelt.md
src/: main.py
src/core/: .gitkeep  __init__.py  ai_backend.py  ai_toolbelt.py  analyzer.py  config.py  executor.py  hash_cache.py  ollama_client.py  path_guard.py  scanner.py  skills_loader.py  storage_db.py  telemetry.py  tool_schemas.py
src/gui/: .gitkeep  __init__.py  assistant_tab.py  charts.py  icon.py  log_bridge.py  main_window.py  scan_status_panel.py  styles.py  workers.py
src/gui/tabs/: __init__.py  duplicates_tab.py  history_tab.py  overview_tab.py  shared.py  suggestions_tab.py  top_dirs_tab.py  top_files_tab.py
tests/: conftest.py  test_ai_backend.py  test_ai_toolbelt.py  test_analyzer.py  test_assistant_tab_lifecycle.py  test_config.py  test_executor.py  test_hash_cache.py  test_log_bridge.py  test_mcp_server.py  test_ollama_client.py  test_path_guard.py  test_scan_status_panel.py  test_scanner.py  test_skills_loader.py  test_storage_db.py  test_telemetry.py  test_workers_signals.py
