[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gerenciador-de-pc"
version = "0.1.0"
description = "Gerenciamento de sistema e armazenamento para Windows 11, desenvolvido por agentes de IA."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "psutil>=5.9",
    "PyQt6>=6.6",
    "send2trash>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
