[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gerenciador-de-pc"
version = "0.3.0"
description = "Gerenciamento de sistema e armazenamento para Windows 11, desenvolvido por agentes de IA."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "psutil>=5.9,<7.0",
    "PySide6>=6.6,<7.0",
    "send2trash>=1.8,<2.0",
    "mcp>=1.0.0,<2.0",
    # Deps transitivas do `mcp` declaradas explicitamente para evitar surpresas
    # (Sprint 7.3.2 — auditoria SC-1).
    "anyio>=4.0,<5.0",
    "httpx>=0.25,<1.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<10.0",
    "pytest-cov>=4.0,<8.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.0,<2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
# RECON 8.3.5 — segmentação de testes para feedback rápido (`pytest -m unit`).
# Cada arquivo de teste declara `pytestmark = pytest.mark.unit|integration` no
# topo do módulo. Marker não registrado emite PytestUnknownMarkWarning.
markers = [
    "unit: testes puros (mocks/tmp_path, sem I/O pesado, subprocess ou Qt widgets)",
    "integration: real I/O, SQLite em disco, Qt widgets, threads, hashing SHA-256",
]

# ─────────────────────────────────────────────────────────────────────────
# mypy — Sprint 7.6
# ─────────────────────────────────────────────────────────────────────────
# Estratégia gradual:
#   - Modo padrão razoavelmente forte (sem disallow_untyped_defs global)
#   - Strict-on-allowlist para módulos novos / já bem tipados
#   - À medida que sprints futuros adicionam type hints, módulos passam
#     da seção [[overrides]] para a allowlist strict.
#
# Rodar local:  python -m mypy src/core/config.py src/core/path_guard.py
# Rodar tudo:   python -m mypy src/

[tool.mypy]
python_version = "3.11"
files = ["src", "scripts"]
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
check_untyped_defs = true
strict_optional = true
# Não habilitar globalmente ainda (codebase tem partes legadas):
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false

# Módulos que JÁ atendem strict — falha rápido se alguém regredir
[[tool.mypy.overrides]]
module = [
    "src.core.config",
    "src.core.path_guard",
    "src.core.hash_cache",
    "src.core.telemetry",
    "src.core.skills_loader",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
strict_equality = true

# Stubs ausentes em deps — não falhar
[[tool.mypy.overrides]]
module = [
    "send2trash",
    "psutil",
    "mcp",
]
ignore_missing_imports = true
